# deepdecipher

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  deepdecipher.pyi  locustfile.py  model_names  package-lock.json  package.json  pyproject.toml  requirements.txt  rustfmt.toml  setup.sh  stress_test.py  test.py  ux_thoughts.txt
.github/workflows/: pre-merge.yml
benches/: neuron_fetch.rs
docker/: backend.dockerfile  compose.yaml  frontend.dockerfile
frontend/: index.html  layer.html  model.html  multi.js  neuron.html  package-lock.json  package.json  server.js  svelte.config.js
frontend/css/: style.css
frontend/js/: base.js  index.js  layer.js  model.js  n2g_search.js  neuron.js  viz-standalone.js
frontend/src/: app.html
frontend/src/lib/: CardDescription.svelte  Footer.svelte  GraphView.svelte  Nav.svelte  NeuronLink.svelte  NeuronPageComponent.svelte  Neuroscope.svelte  Title.svelte  base.ts  modelMetadata.ts  n2g_search.ts
frontend/src/routes/: +page.server.ts
frontend/src/routes/api/[...api_slug]/: +server.ts
frontend/src/routes/doc/[...doc_slug]/: +server.ts
frontend/src/routes/viz/: +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/viz/[model]/: +page.server.ts
frontend/src/routes/viz/[model]/[service]/: +page.server.ts  +page.svelte  NeuronChooser.svelte  SearchResults.svelte  data.ts  stores.ts
frontend/src/routes/viz/[model]/[service]/[layer]/: +page.svelte
frontend/src/routes/viz/features/: +page.svelte
frontend/src/routes/viz/models/: +page.svelte
neuronav/: __init__.py
python/deepdecipher/: __init__.py  __main__.py
python/neuronav/: __init__.py  __main__.py
scripts/: add_neuroscope_data_object.py  check_n2g.py  data-aggregation.ipynb  neuroscope_scrape.ipynb  rename_data_object_table.py  retrieve_neuron2graph.py  retrieve_neuron_explainer.py  retrieve_neuron_store.py  scrape_neuroscope.py  test_add_json_data.py
scripts/locust/: api.py  locustfile.py  viz.py
server/: Caddyfile  deepdecipher-backend.service  deepdecipher.service  deploy_all.sh  deploy_backend.sh  deploy_frontend.sh  update_caddy.sh  update_services.sh
src/: 1.json  cli.rs  data-aggregation.ipynb  index.rs  lib.rs  logging.rs  scraping-neuroscope.ipynb
src/data/: data_object.rs  database.rs  json.rs  metadata.rs  mod.rs  neuron2graph.rs  neuron_explainer_page.rs  neuron_index.rs  neuron_store.rs  neuron_viewer_object.rs  neuroscope_page.rs  payload.rs  token_dictionary.rs
src/data/data_objects/: data_object.rs  json.rs  metadata.rs  metadata_object.rs  mod.rs  neuron2graph.rs  neuron_explainer_page.rs  neuroscope.rs
src/data/data_objects/neuroscope/: neuroscope_layer_page.rs  neuroscope_model_page.rs  neuroscope_page.rs
src/data/data_types/: data_object.rs  data_type.rs  mod.rs  neuron_store.rs  neuroscope.rs
src/data/database/: data_object_handle.rs  data_type_handle.rs  mod.rs  model_handle.rs  service_handle.rs  table_definitions.rs  validation.rs
src/data/database/data_types/: data_object.rs  data_type.rs  json.rs  mod.rs  neuron2graph.rs  neuron_explainer.rs  neuron_store.rs  neuroscope.rs
src/data/neuron_explainer_old/: activations.rs  explanations.rs  mod.rs
src/data/neuroscope/: mod.rs  neuroscope_layer_page.rs  neuroscope_model_page.rs  neuroscope_page.rs
src/data/retrieve/: json.rs  mod.rs  neuron2graph.rs  neuron_explainer.rs  neuron_store.rs  neuroscope.rs
src/pyo3/: data_object_handle.rs  data_type.rs  data_type_handle.rs  database.rs  index.rs  mod.rs  model_handle.rs  model_metadata.rs  service_handle.rs  service_provider.rs
src/server/: api_doc.rs  metadata.rs  mod.rs  neuron2graph.rs  response.rs  service.rs  service_provider.rs  start.rs
src/server/service_providers/: json.rs  json_search.rs  metadata.rs  mod.rs  neuron2graph.rs  neuron2graph_search.rs  neuron_explainer.rs  neuroscope.rs  service_provider.rs
src/util/: mod.rs  progress.rs
svelte-teste/: package-lock.json  package.json  svelte.config.js
svelte-teste/src/: base.ts  modelMetadata.ts
svelte-teste/src/lib/: base.ts  modelMetadata.ts  n2g_search.ts
svelte-teste/src/routes/: +layout.svelte  +page.svelte
svelte-teste/src/routes/[model]/[service]/: +page.server.ts  +page.svelte  SearchResults.svelte  data.ts
svelte-teste/src/routes/[model]/[service]/[layer]/: +page.svelte
svelte-teste/src/routes/[model]/[service]/[layer]/[neuron]/: +page.server.ts  +page.svelte  Gpt4Explanation.svelte  Neuroscope.svelte  NotAvailable.svelte  SimilarNeurons.svelte  data.ts
svelte-teste/src/routes/api/[...api_slug]/: +server.ts
svelte-teste/src/routes/doc/[...doc_slug]/: +server.ts
svelte-teste/src/routes/viz/: +layout.svelte  +page.server.ts  +page.svelte
svelte-teste/src/routes/viz/[model]/[service]/: +page.server.ts  +page.svelte  NeuronChooser.svelte  data.ts
svelte-teste/src/routes/viz/[model]/[service]/[layer]/: +page.server.ts
tests/: request_test.py
(+18 files in other folders)
