[package]
name = "deepdecipher"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "deepdecipher"
crate-type = ["cdylib", "rlib"]

[dependencies]

# Web server
actix-web = "4.3.1"
actix-files = "0.6.2"

# Serialization
serde = "1.0.164"
serde_json = "1.0.96"
postcard = { version = "1.0.4", features = ["alloc"] }

# f16
half = { version = "2.2.1", features = ["serde"] }

# Error handling
anyhow = "1.0.71"

# Scraping
regex = "1.8.4"

# Iterators
itertools = "0.11.0"

# Compression
flate2 = "1.0.26"

# Interfacing with Python
pyo3 = { version = "0.19.1", features = [
    "extension-module",
    "anyhow",
], optional = true }
numpy = { version = "0.19", optional = true }

# SIGINT handling
ctrlc = { version = "3.2.5", optional = true }

# Logging
log = "0.4.19"
env_logger = "0.10.0"
multi_log = "0.1.2"
log-panics = { version = "2", features = ["with-backtrace"] }

# CLI
clap = { version = "4.3.19", features = ["derive"] }

tokio = { version = "1.28.2", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "fs",
    "macros",
] }
reqwest = { version = "0.11.18", features = ["json"] }
ndarray = { version = "0.15.6", features = ["serde"] }
scraper = "0.17.1"
delegate = "0.10.0"
async-trait = "0.1.68"
rusqlite = { version = "0.29.0", features = ["bundled"] }
strum = { version = "0.25.0", features = ["derive"] }
tokio-rusqlite = "0.4.0"
snap = "1.1.0"
zstd = "0.12.3"
utoipa = { version = "3.4.4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["actix-web"] }
utoipa-rapidoc = { version = "0.1.0", features = ["actix-web"] }
utoipa-redoc = { version = "0.1.0", features = ["actix-web"] }

[features]
python = ["dep:pyo3", "dep:numpy", "dep:ctrlc"]
